parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    ERROR
    IDERR
    IGUAL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROG ID PC DECL declaraciones INICIO sentencias FIN
Rule 2     declaraciones -> declaracion declaraciones
Rule 3     declaraciones -> empty
Rule 4     declaracion -> TYPE ID decVarias PC
Rule 5     decVarias -> COMA ID decVarias
Rule 6     decVarias -> empty
Rule 7     sentencias -> sentencia sentencias
Rule 8     sentencias -> empty
Rule 9     sentencia -> impdig_sent
Rule 10    sentencia -> impcad_sent
Rule 11    sentencia -> asignacion
Rule 12    sentencia -> lectura
Rule 13    sentencia -> declaracion
Rule 14    impdig_sent -> IMPDIG expresion PC
Rule 15    impcad_sent -> IMPCAD CADENA_LITERAL PC
Rule 16    impcad_sent -> IMPCAD ID PC
Rule 17    asignacion -> ID ASIG expresion PC
Rule 18    lectura -> LEERDIG ID PC
Rule 19    lectura -> LEERCAD ID PC
Rule 20    expresion -> expresion MAS expresion
Rule 21    expresion -> expresion MENOS expresion
Rule 22    expresion -> expresion MUL expresion
Rule 23    expresion -> expresion DIV expresion
Rule 24    expresion -> PAREN expresion TESIS
Rule 25    expresion -> CADENA_LITERAL
Rule 26    expresion -> CINT
Rule 27    expresion -> ID
Rule 28    empty -> <empty>

Terminals, with rules where they appear

ASIG                 : 17
BOOL                 : 
CADENA_LITERAL       : 15 25
CINT                 : 26
COMA                 : 5
DECL                 : 1
DIV                  : 23
ERROR                : 
FIN                  : 1
ID                   : 1 4 5 16 17 18 19 27
IDERR                : 
IGUAL                : 
IMPCAD               : 15 16
IMPDIG               : 14
INICIO               : 1
LEERCAD              : 19
LEERDIG              : 18
MAS                  : 20
MENOS                : 21
MUL                  : 22
PAREN                : 24
PC                   : 1 4 14 15 16 17 18 19
PROG                 : 1
TESIS                : 24
TYPE                 : 4
error                : 

Nonterminals, with rules where they appear

asignacion           : 11
decVarias            : 4 5
declaracion          : 2 13
declaraciones        : 1 2
empty                : 3 6 8
expresion            : 14 17 20 20 21 21 22 22 23 23 24
impcad_sent          : 10
impdig_sent          : 9
lectura              : 12
programa             : 0
sentencia            : 7
sentencias           : 1 7

Parsing method: SLR

state 0

    (0) S' -> . programa
    (1) programa -> . PROG ID PC DECL declaraciones INICIO sentencias FIN

    PROG            shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROG . ID PC DECL declaraciones INICIO sentencias FIN

    ID              shift and go to state 3


state 3

    (1) programa -> PROG ID . PC DECL declaraciones INICIO sentencias FIN

    PC              shift and go to state 4


state 4

    (1) programa -> PROG ID PC . DECL declaraciones INICIO sentencias FIN

    DECL            shift and go to state 5


state 5

    (1) programa -> PROG ID PC DECL . declaraciones INICIO sentencias FIN
    (2) declaraciones -> . declaracion declaraciones
    (3) declaraciones -> . empty
    (4) declaracion -> . TYPE ID decVarias PC
    (28) empty -> .

    TYPE            shift and go to state 9
    INICIO          reduce using rule 28 (empty -> .)
    PC              reduce using rule 28 (empty -> .)
    FIN             reduce using rule 28 (empty -> .)

    declaraciones                  shift and go to state 6
    declaracion                    shift and go to state 7
    empty                          shift and go to state 8

state 6

    (1) programa -> PROG ID PC DECL declaraciones . INICIO sentencias FIN

    INICIO          shift and go to state 10


state 7

    (2) declaraciones -> declaracion . declaraciones
    (2) declaraciones -> . declaracion declaraciones
    (3) declaraciones -> . empty
    (4) declaracion -> . TYPE ID decVarias PC
    (28) empty -> .

    TYPE            shift and go to state 9
    INICIO          reduce using rule 28 (empty -> .)
    PC              reduce using rule 28 (empty -> .)
    FIN             reduce using rule 28 (empty -> .)

    declaracion                    shift and go to state 7
    declaraciones                  shift and go to state 11
    empty                          shift and go to state 8

state 8

    (3) declaraciones -> empty .

    INICIO          reduce using rule 3 (declaraciones -> empty .)


state 9

    (4) declaracion -> TYPE . ID decVarias PC

    ID              shift and go to state 12


state 10

    (1) programa -> PROG ID PC DECL declaraciones INICIO . sentencias FIN
    (7) sentencias -> . sentencia sentencias
    (8) sentencias -> . empty
    (9) sentencia -> . impdig_sent
    (10) sentencia -> . impcad_sent
    (11) sentencia -> . asignacion
    (12) sentencia -> . lectura
    (13) sentencia -> . declaracion
    (28) empty -> .
    (14) impdig_sent -> . IMPDIG expresion PC
    (15) impcad_sent -> . IMPCAD CADENA_LITERAL PC
    (16) impcad_sent -> . IMPCAD ID PC
    (17) asignacion -> . ID ASIG expresion PC
    (18) lectura -> . LEERDIG ID PC
    (19) lectura -> . LEERCAD ID PC
    (4) declaracion -> . TYPE ID decVarias PC

    INICIO          reduce using rule 28 (empty -> .)
    PC              reduce using rule 28 (empty -> .)
    FIN             reduce using rule 28 (empty -> .)
    IMPDIG          shift and go to state 22
    IMPCAD          shift and go to state 23
    ID              shift and go to state 13
    LEERDIG         shift and go to state 24
    LEERCAD         shift and go to state 25
    TYPE            shift and go to state 9

    sentencias                     shift and go to state 14
    sentencia                      shift and go to state 15
    empty                          shift and go to state 16
    impdig_sent                    shift and go to state 17
    impcad_sent                    shift and go to state 18
    asignacion                     shift and go to state 19
    lectura                        shift and go to state 20
    declaracion                    shift and go to state 21

state 11

    (2) declaraciones -> declaracion declaraciones .

    INICIO          reduce using rule 2 (declaraciones -> declaracion declaraciones .)


state 12

    (4) declaracion -> TYPE ID . decVarias PC
    (5) decVarias -> . COMA ID decVarias
    (6) decVarias -> . empty
    (28) empty -> .

    COMA            shift and go to state 27
    INICIO          reduce using rule 28 (empty -> .)
    PC              reduce using rule 28 (empty -> .)
    FIN             reduce using rule 28 (empty -> .)

    decVarias                      shift and go to state 26
    empty                          shift and go to state 28

state 13

    (17) asignacion -> ID . ASIG expresion PC

    ASIG            shift and go to state 29


state 14

    (1) programa -> PROG ID PC DECL declaraciones INICIO sentencias . FIN

    FIN             shift and go to state 30


state 15

    (7) sentencias -> sentencia . sentencias
    (7) sentencias -> . sentencia sentencias
    (8) sentencias -> . empty
    (9) sentencia -> . impdig_sent
    (10) sentencia -> . impcad_sent
    (11) sentencia -> . asignacion
    (12) sentencia -> . lectura
    (13) sentencia -> . declaracion
    (28) empty -> .
    (14) impdig_sent -> . IMPDIG expresion PC
    (15) impcad_sent -> . IMPCAD CADENA_LITERAL PC
    (16) impcad_sent -> . IMPCAD ID PC
    (17) asignacion -> . ID ASIG expresion PC
    (18) lectura -> . LEERDIG ID PC
    (19) lectura -> . LEERCAD ID PC
    (4) declaracion -> . TYPE ID decVarias PC

    INICIO          reduce using rule 28 (empty -> .)
    PC              reduce using rule 28 (empty -> .)
    FIN             reduce using rule 28 (empty -> .)
    IMPDIG          shift and go to state 22
    IMPCAD          shift and go to state 23
    ID              shift and go to state 13
    LEERDIG         shift and go to state 24
    LEERCAD         shift and go to state 25
    TYPE            shift and go to state 9

    sentencia                      shift and go to state 15
    sentencias                     shift and go to state 31
    empty                          shift and go to state 16
    impdig_sent                    shift and go to state 17
    impcad_sent                    shift and go to state 18
    asignacion                     shift and go to state 19
    lectura                        shift and go to state 20
    declaracion                    shift and go to state 21

state 16

    (8) sentencias -> empty .

    FIN             reduce using rule 8 (sentencias -> empty .)


state 17

    (9) sentencia -> impdig_sent .

    TYPE            reduce using rule 9 (sentencia -> impdig_sent .)
    IMPDIG          reduce using rule 9 (sentencia -> impdig_sent .)
    IMPCAD          reduce using rule 9 (sentencia -> impdig_sent .)
    ID              reduce using rule 9 (sentencia -> impdig_sent .)
    LEERDIG         reduce using rule 9 (sentencia -> impdig_sent .)
    LEERCAD         reduce using rule 9 (sentencia -> impdig_sent .)
    FIN             reduce using rule 9 (sentencia -> impdig_sent .)


state 18

    (10) sentencia -> impcad_sent .

    TYPE            reduce using rule 10 (sentencia -> impcad_sent .)
    IMPDIG          reduce using rule 10 (sentencia -> impcad_sent .)
    IMPCAD          reduce using rule 10 (sentencia -> impcad_sent .)
    ID              reduce using rule 10 (sentencia -> impcad_sent .)
    LEERDIG         reduce using rule 10 (sentencia -> impcad_sent .)
    LEERCAD         reduce using rule 10 (sentencia -> impcad_sent .)
    FIN             reduce using rule 10 (sentencia -> impcad_sent .)


state 19

    (11) sentencia -> asignacion .

    TYPE            reduce using rule 11 (sentencia -> asignacion .)
    IMPDIG          reduce using rule 11 (sentencia -> asignacion .)
    IMPCAD          reduce using rule 11 (sentencia -> asignacion .)
    ID              reduce using rule 11 (sentencia -> asignacion .)
    LEERDIG         reduce using rule 11 (sentencia -> asignacion .)
    LEERCAD         reduce using rule 11 (sentencia -> asignacion .)
    FIN             reduce using rule 11 (sentencia -> asignacion .)


state 20

    (12) sentencia -> lectura .

    TYPE            reduce using rule 12 (sentencia -> lectura .)
    IMPDIG          reduce using rule 12 (sentencia -> lectura .)
    IMPCAD          reduce using rule 12 (sentencia -> lectura .)
    ID              reduce using rule 12 (sentencia -> lectura .)
    LEERDIG         reduce using rule 12 (sentencia -> lectura .)
    LEERCAD         reduce using rule 12 (sentencia -> lectura .)
    FIN             reduce using rule 12 (sentencia -> lectura .)


state 21

    (13) sentencia -> declaracion .

    TYPE            reduce using rule 13 (sentencia -> declaracion .)
    IMPDIG          reduce using rule 13 (sentencia -> declaracion .)
    IMPCAD          reduce using rule 13 (sentencia -> declaracion .)
    ID              reduce using rule 13 (sentencia -> declaracion .)
    LEERDIG         reduce using rule 13 (sentencia -> declaracion .)
    LEERCAD         reduce using rule 13 (sentencia -> declaracion .)
    FIN             reduce using rule 13 (sentencia -> declaracion .)


state 22

    (14) impdig_sent -> IMPDIG . expresion PC
    (20) expresion -> . expresion MAS expresion
    (21) expresion -> . expresion MENOS expresion
    (22) expresion -> . expresion MUL expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PAREN expresion TESIS
    (25) expresion -> . CADENA_LITERAL
    (26) expresion -> . CINT
    (27) expresion -> . ID

    PAREN           shift and go to state 33
    CADENA_LITERAL  shift and go to state 34
    CINT            shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 32

state 23

    (15) impcad_sent -> IMPCAD . CADENA_LITERAL PC
    (16) impcad_sent -> IMPCAD . ID PC

    CADENA_LITERAL  shift and go to state 37
    ID              shift and go to state 38


state 24

    (18) lectura -> LEERDIG . ID PC

    ID              shift and go to state 39


state 25

    (19) lectura -> LEERCAD . ID PC

    ID              shift and go to state 40


state 26

    (4) declaracion -> TYPE ID decVarias . PC

    PC              shift and go to state 41


state 27

    (5) decVarias -> COMA . ID decVarias

    ID              shift and go to state 42


state 28

    (6) decVarias -> empty .

    PC              reduce using rule 6 (decVarias -> empty .)


state 29

    (17) asignacion -> ID ASIG . expresion PC
    (20) expresion -> . expresion MAS expresion
    (21) expresion -> . expresion MENOS expresion
    (22) expresion -> . expresion MUL expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PAREN expresion TESIS
    (25) expresion -> . CADENA_LITERAL
    (26) expresion -> . CINT
    (27) expresion -> . ID

    PAREN           shift and go to state 33
    CADENA_LITERAL  shift and go to state 34
    CINT            shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 43

state 30

    (1) programa -> PROG ID PC DECL declaraciones INICIO sentencias FIN .

    $end            reduce using rule 1 (programa -> PROG ID PC DECL declaraciones INICIO sentencias FIN .)


state 31

    (7) sentencias -> sentencia sentencias .

    FIN             reduce using rule 7 (sentencias -> sentencia sentencias .)


state 32

    (14) impdig_sent -> IMPDIG expresion . PC
    (20) expresion -> expresion . MAS expresion
    (21) expresion -> expresion . MENOS expresion
    (22) expresion -> expresion . MUL expresion
    (23) expresion -> expresion . DIV expresion

    PC              shift and go to state 44
    MAS             shift and go to state 45
    MENOS           shift and go to state 46
    MUL             shift and go to state 47
    DIV             shift and go to state 48


state 33

    (24) expresion -> PAREN . expresion TESIS
    (20) expresion -> . expresion MAS expresion
    (21) expresion -> . expresion MENOS expresion
    (22) expresion -> . expresion MUL expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PAREN expresion TESIS
    (25) expresion -> . CADENA_LITERAL
    (26) expresion -> . CINT
    (27) expresion -> . ID

    PAREN           shift and go to state 33
    CADENA_LITERAL  shift and go to state 34
    CINT            shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 49

state 34

    (25) expresion -> CADENA_LITERAL .

    PC              reduce using rule 25 (expresion -> CADENA_LITERAL .)
    MAS             reduce using rule 25 (expresion -> CADENA_LITERAL .)
    MENOS           reduce using rule 25 (expresion -> CADENA_LITERAL .)
    MUL             reduce using rule 25 (expresion -> CADENA_LITERAL .)
    DIV             reduce using rule 25 (expresion -> CADENA_LITERAL .)
    TESIS           reduce using rule 25 (expresion -> CADENA_LITERAL .)


state 35

    (26) expresion -> CINT .

    PC              reduce using rule 26 (expresion -> CINT .)
    MAS             reduce using rule 26 (expresion -> CINT .)
    MENOS           reduce using rule 26 (expresion -> CINT .)
    MUL             reduce using rule 26 (expresion -> CINT .)
    DIV             reduce using rule 26 (expresion -> CINT .)
    TESIS           reduce using rule 26 (expresion -> CINT .)


state 36

    (27) expresion -> ID .

    PC              reduce using rule 27 (expresion -> ID .)
    MAS             reduce using rule 27 (expresion -> ID .)
    MENOS           reduce using rule 27 (expresion -> ID .)
    MUL             reduce using rule 27 (expresion -> ID .)
    DIV             reduce using rule 27 (expresion -> ID .)
    TESIS           reduce using rule 27 (expresion -> ID .)


state 37

    (15) impcad_sent -> IMPCAD CADENA_LITERAL . PC

    PC              shift and go to state 50


state 38

    (16) impcad_sent -> IMPCAD ID . PC

    PC              shift and go to state 51


state 39

    (18) lectura -> LEERDIG ID . PC

    PC              shift and go to state 52


state 40

    (19) lectura -> LEERCAD ID . PC

    PC              shift and go to state 53


state 41

    (4) declaracion -> TYPE ID decVarias PC .

    TYPE            reduce using rule 4 (declaracion -> TYPE ID decVarias PC .)
    INICIO          reduce using rule 4 (declaracion -> TYPE ID decVarias PC .)
    IMPDIG          reduce using rule 4 (declaracion -> TYPE ID decVarias PC .)
    IMPCAD          reduce using rule 4 (declaracion -> TYPE ID decVarias PC .)
    ID              reduce using rule 4 (declaracion -> TYPE ID decVarias PC .)
    LEERDIG         reduce using rule 4 (declaracion -> TYPE ID decVarias PC .)
    LEERCAD         reduce using rule 4 (declaracion -> TYPE ID decVarias PC .)
    FIN             reduce using rule 4 (declaracion -> TYPE ID decVarias PC .)


state 42

    (5) decVarias -> COMA ID . decVarias
    (5) decVarias -> . COMA ID decVarias
    (6) decVarias -> . empty
    (28) empty -> .

    COMA            shift and go to state 27
    INICIO          reduce using rule 28 (empty -> .)
    PC              reduce using rule 28 (empty -> .)
    FIN             reduce using rule 28 (empty -> .)

    decVarias                      shift and go to state 54
    empty                          shift and go to state 28

state 43

    (17) asignacion -> ID ASIG expresion . PC
    (20) expresion -> expresion . MAS expresion
    (21) expresion -> expresion . MENOS expresion
    (22) expresion -> expresion . MUL expresion
    (23) expresion -> expresion . DIV expresion

    PC              shift and go to state 55
    MAS             shift and go to state 45
    MENOS           shift and go to state 46
    MUL             shift and go to state 47
    DIV             shift and go to state 48


state 44

    (14) impdig_sent -> IMPDIG expresion PC .

    TYPE            reduce using rule 14 (impdig_sent -> IMPDIG expresion PC .)
    IMPDIG          reduce using rule 14 (impdig_sent -> IMPDIG expresion PC .)
    IMPCAD          reduce using rule 14 (impdig_sent -> IMPDIG expresion PC .)
    ID              reduce using rule 14 (impdig_sent -> IMPDIG expresion PC .)
    LEERDIG         reduce using rule 14 (impdig_sent -> IMPDIG expresion PC .)
    LEERCAD         reduce using rule 14 (impdig_sent -> IMPDIG expresion PC .)
    FIN             reduce using rule 14 (impdig_sent -> IMPDIG expresion PC .)


state 45

    (20) expresion -> expresion MAS . expresion
    (20) expresion -> . expresion MAS expresion
    (21) expresion -> . expresion MENOS expresion
    (22) expresion -> . expresion MUL expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PAREN expresion TESIS
    (25) expresion -> . CADENA_LITERAL
    (26) expresion -> . CINT
    (27) expresion -> . ID

    PAREN           shift and go to state 33
    CADENA_LITERAL  shift and go to state 34
    CINT            shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 56

state 46

    (21) expresion -> expresion MENOS . expresion
    (20) expresion -> . expresion MAS expresion
    (21) expresion -> . expresion MENOS expresion
    (22) expresion -> . expresion MUL expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PAREN expresion TESIS
    (25) expresion -> . CADENA_LITERAL
    (26) expresion -> . CINT
    (27) expresion -> . ID

    PAREN           shift and go to state 33
    CADENA_LITERAL  shift and go to state 34
    CINT            shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 57

state 47

    (22) expresion -> expresion MUL . expresion
    (20) expresion -> . expresion MAS expresion
    (21) expresion -> . expresion MENOS expresion
    (22) expresion -> . expresion MUL expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PAREN expresion TESIS
    (25) expresion -> . CADENA_LITERAL
    (26) expresion -> . CINT
    (27) expresion -> . ID

    PAREN           shift and go to state 33
    CADENA_LITERAL  shift and go to state 34
    CINT            shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 58

state 48

    (23) expresion -> expresion DIV . expresion
    (20) expresion -> . expresion MAS expresion
    (21) expresion -> . expresion MENOS expresion
    (22) expresion -> . expresion MUL expresion
    (23) expresion -> . expresion DIV expresion
    (24) expresion -> . PAREN expresion TESIS
    (25) expresion -> . CADENA_LITERAL
    (26) expresion -> . CINT
    (27) expresion -> . ID

    PAREN           shift and go to state 33
    CADENA_LITERAL  shift and go to state 34
    CINT            shift and go to state 35
    ID              shift and go to state 36

    expresion                      shift and go to state 59

state 49

    (24) expresion -> PAREN expresion . TESIS
    (20) expresion -> expresion . MAS expresion
    (21) expresion -> expresion . MENOS expresion
    (22) expresion -> expresion . MUL expresion
    (23) expresion -> expresion . DIV expresion

    TESIS           shift and go to state 60
    MAS             shift and go to state 45
    MENOS           shift and go to state 46
    MUL             shift and go to state 47
    DIV             shift and go to state 48


state 50

    (15) impcad_sent -> IMPCAD CADENA_LITERAL PC .

    TYPE            reduce using rule 15 (impcad_sent -> IMPCAD CADENA_LITERAL PC .)
    IMPDIG          reduce using rule 15 (impcad_sent -> IMPCAD CADENA_LITERAL PC .)
    IMPCAD          reduce using rule 15 (impcad_sent -> IMPCAD CADENA_LITERAL PC .)
    ID              reduce using rule 15 (impcad_sent -> IMPCAD CADENA_LITERAL PC .)
    LEERDIG         reduce using rule 15 (impcad_sent -> IMPCAD CADENA_LITERAL PC .)
    LEERCAD         reduce using rule 15 (impcad_sent -> IMPCAD CADENA_LITERAL PC .)
    FIN             reduce using rule 15 (impcad_sent -> IMPCAD CADENA_LITERAL PC .)


state 51

    (16) impcad_sent -> IMPCAD ID PC .

    TYPE            reduce using rule 16 (impcad_sent -> IMPCAD ID PC .)
    IMPDIG          reduce using rule 16 (impcad_sent -> IMPCAD ID PC .)
    IMPCAD          reduce using rule 16 (impcad_sent -> IMPCAD ID PC .)
    ID              reduce using rule 16 (impcad_sent -> IMPCAD ID PC .)
    LEERDIG         reduce using rule 16 (impcad_sent -> IMPCAD ID PC .)
    LEERCAD         reduce using rule 16 (impcad_sent -> IMPCAD ID PC .)
    FIN             reduce using rule 16 (impcad_sent -> IMPCAD ID PC .)


state 52

    (18) lectura -> LEERDIG ID PC .

    TYPE            reduce using rule 18 (lectura -> LEERDIG ID PC .)
    IMPDIG          reduce using rule 18 (lectura -> LEERDIG ID PC .)
    IMPCAD          reduce using rule 18 (lectura -> LEERDIG ID PC .)
    ID              reduce using rule 18 (lectura -> LEERDIG ID PC .)
    LEERDIG         reduce using rule 18 (lectura -> LEERDIG ID PC .)
    LEERCAD         reduce using rule 18 (lectura -> LEERDIG ID PC .)
    FIN             reduce using rule 18 (lectura -> LEERDIG ID PC .)


state 53

    (19) lectura -> LEERCAD ID PC .

    TYPE            reduce using rule 19 (lectura -> LEERCAD ID PC .)
    IMPDIG          reduce using rule 19 (lectura -> LEERCAD ID PC .)
    IMPCAD          reduce using rule 19 (lectura -> LEERCAD ID PC .)
    ID              reduce using rule 19 (lectura -> LEERCAD ID PC .)
    LEERDIG         reduce using rule 19 (lectura -> LEERCAD ID PC .)
    LEERCAD         reduce using rule 19 (lectura -> LEERCAD ID PC .)
    FIN             reduce using rule 19 (lectura -> LEERCAD ID PC .)


state 54

    (5) decVarias -> COMA ID decVarias .

    PC              reduce using rule 5 (decVarias -> COMA ID decVarias .)


state 55

    (17) asignacion -> ID ASIG expresion PC .

    TYPE            reduce using rule 17 (asignacion -> ID ASIG expresion PC .)
    IMPDIG          reduce using rule 17 (asignacion -> ID ASIG expresion PC .)
    IMPCAD          reduce using rule 17 (asignacion -> ID ASIG expresion PC .)
    ID              reduce using rule 17 (asignacion -> ID ASIG expresion PC .)
    LEERDIG         reduce using rule 17 (asignacion -> ID ASIG expresion PC .)
    LEERCAD         reduce using rule 17 (asignacion -> ID ASIG expresion PC .)
    FIN             reduce using rule 17 (asignacion -> ID ASIG expresion PC .)


state 56

    (20) expresion -> expresion MAS expresion .
    (20) expresion -> expresion . MAS expresion
    (21) expresion -> expresion . MENOS expresion
    (22) expresion -> expresion . MUL expresion
    (23) expresion -> expresion . DIV expresion

    PC              reduce using rule 20 (expresion -> expresion MAS expresion .)
    MAS             reduce using rule 20 (expresion -> expresion MAS expresion .)
    MENOS           reduce using rule 20 (expresion -> expresion MAS expresion .)
    TESIS           reduce using rule 20 (expresion -> expresion MAS expresion .)
    MUL             shift and go to state 47
    DIV             shift and go to state 48

  ! MUL             [ reduce using rule 20 (expresion -> expresion MAS expresion .) ]
  ! DIV             [ reduce using rule 20 (expresion -> expresion MAS expresion .) ]
  ! MAS             [ shift and go to state 45 ]
  ! MENOS           [ shift and go to state 46 ]


state 57

    (21) expresion -> expresion MENOS expresion .
    (20) expresion -> expresion . MAS expresion
    (21) expresion -> expresion . MENOS expresion
    (22) expresion -> expresion . MUL expresion
    (23) expresion -> expresion . DIV expresion

    PC              reduce using rule 21 (expresion -> expresion MENOS expresion .)
    MAS             reduce using rule 21 (expresion -> expresion MENOS expresion .)
    MENOS           reduce using rule 21 (expresion -> expresion MENOS expresion .)
    TESIS           reduce using rule 21 (expresion -> expresion MENOS expresion .)
    MUL             shift and go to state 47
    DIV             shift and go to state 48

  ! MUL             [ reduce using rule 21 (expresion -> expresion MENOS expresion .) ]
  ! DIV             [ reduce using rule 21 (expresion -> expresion MENOS expresion .) ]
  ! MAS             [ shift and go to state 45 ]
  ! MENOS           [ shift and go to state 46 ]


state 58

    (22) expresion -> expresion MUL expresion .
    (20) expresion -> expresion . MAS expresion
    (21) expresion -> expresion . MENOS expresion
    (22) expresion -> expresion . MUL expresion
    (23) expresion -> expresion . DIV expresion

    PC              reduce using rule 22 (expresion -> expresion MUL expresion .)
    MAS             reduce using rule 22 (expresion -> expresion MUL expresion .)
    MENOS           reduce using rule 22 (expresion -> expresion MUL expresion .)
    MUL             reduce using rule 22 (expresion -> expresion MUL expresion .)
    DIV             reduce using rule 22 (expresion -> expresion MUL expresion .)
    TESIS           reduce using rule 22 (expresion -> expresion MUL expresion .)

  ! MAS             [ shift and go to state 45 ]
  ! MENOS           [ shift and go to state 46 ]
  ! MUL             [ shift and go to state 47 ]
  ! DIV             [ shift and go to state 48 ]


state 59

    (23) expresion -> expresion DIV expresion .
    (20) expresion -> expresion . MAS expresion
    (21) expresion -> expresion . MENOS expresion
    (22) expresion -> expresion . MUL expresion
    (23) expresion -> expresion . DIV expresion

    PC              reduce using rule 23 (expresion -> expresion DIV expresion .)
    MAS             reduce using rule 23 (expresion -> expresion DIV expresion .)
    MENOS           reduce using rule 23 (expresion -> expresion DIV expresion .)
    MUL             reduce using rule 23 (expresion -> expresion DIV expresion .)
    DIV             reduce using rule 23 (expresion -> expresion DIV expresion .)
    TESIS           reduce using rule 23 (expresion -> expresion DIV expresion .)

  ! MAS             [ shift and go to state 45 ]
  ! MENOS           [ shift and go to state 46 ]
  ! MUL             [ shift and go to state 47 ]
  ! DIV             [ shift and go to state 48 ]


state 60

    (24) expresion -> PAREN expresion TESIS .

    PC              reduce using rule 24 (expresion -> PAREN expresion TESIS .)
    MAS             reduce using rule 24 (expresion -> PAREN expresion TESIS .)
    MENOS           reduce using rule 24 (expresion -> PAREN expresion TESIS .)
    MUL             reduce using rule 24 (expresion -> PAREN expresion TESIS .)
    DIV             reduce using rule 24 (expresion -> PAREN expresion TESIS .)
    TESIS           reduce using rule 24 (expresion -> PAREN expresion TESIS .)

